--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       }
     });
 
+    // Botão Logout
     const logoutBtn = document.getElementById('logoutBtn');
     logoutBtn.addEventListener('click', async () => {
       await signOut(auth);
@@ -48,7 +49,19 @@
     <!-- Cabeçalho -->
     <header class="ficha-header">
       <div class="logo">CANDELA OBSCURA</div>
+      <!-- Botão Logout -->
       <button id="logoutBtn" class="btn-logout">Logout</button>
+      <!-- Simulador de Dados -->
+      <button id="btnSimuladorDados" class="btn-simulador">Simulador de Dados ▼</button>
+      <div id="menuSimuladorDados" class="menu-simulador" style="display:none;">
+        <button data-lados="4">D4</button>
+        <button data-lados="6">D6</button>
+        <button data-lados="8">D8</button>
+        <button data-lados="12">D12</button>
+        <button data-lados="20">D20</button>
+        <button data-lados="100">D100</button>
+      </div>
+
       <section id="fichasManager" class="fichas-manager">
         <h2>Minhas Fichas</h2>
         <ul id="listaFichas" class="lista-fichas">
@@ -143,82 +156,90 @@
         </section>
 
         <!-- Marcas, Relacionamentos, Equipamento e Notas -->
-          <div class="section marcas">
-            <div class="header-black">
-              <h2>MARCAS</h2>
-            </div>
-            <div class="marcas-conteudo">
-              <div class="categoria" data-categoria="corpo">
-                <h3>CORPO</h3>
-                <label class="max-marcas-control">
-                  Máximo de marcas:
-                  <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
-                </label>
-                <ul class="marcas-lista"></ul>
-              </div>
-
-              <div class="categoria" data-categoria="mente">
-                <h3>MENTE</h3>
-                <label class="max-marcas-control">
-                  Máximo de marcas:
-                  <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
-                </label>
-                <ul class="marcas-lista"></ul>
-              </div>
-
-              <div class="categoria" data-categoria="sangria">
-                <h3>SANGRIA</h3>
-                <label class="max-marcas-control">
-                  Máximo de marcas:
-                  <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
-                </label>
-                <ul class="marcas-lista"></ul>
-              </div>
+        <div class="section marcas">
+          <div class="header-black">
+            <h2>MARCAS</h2>
+          </div>
+          <div class="marcas-conteudo">
+            <div class="categoria" data-categoria="corpo">
+              <h3>CORPO</h3>
+              <label class="max-marcas-control">
+                Máximo de marcas:
+                <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
+              </label>
+              <ul class="marcas-lista"></ul>
             </div>
 
+            <div class="categoria" data-categoria="mente">
+              <h3>MENTE</h3>
+              <label class="max-marcas-control">
+                Máximo de marcas:
+                <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
+              </label>
+              <ul class="marcas-lista"></ul>
+            </div>
+
+            <div class="categoria" data-categoria="sangria">
+              <h3>SANGRIA</h3>
+              <label class="max-marcas-control">
+                Máximo de marcas:
+                <input type="number" min="1" max="20" value="6" class="max-marcas-input" />
+              </label>
+              <ul class="marcas-lista"></ul>
+            </div>
           </div>
 
-          <div class="subsection relacionamentos">
-            <h3>RELACIONAMENTOS</h3>
-            <ul class="lista-relacionamento">
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-              <li><input type="text"></li>
-            </ul>
-          </div>
+        </div>
 
-          <div class="subsection equipamento">
-            <h3>EQUIPAMENTO</h3>
-            <p>Durante cada atribuição, escolha até três.</p>
-            <ul class="lista-equipamento">
-              <li><input type="checkbox"> <input type="text"></li>
-              <li><input type="checkbox"> <input type="text"></li>
-              <li><input type="checkbox"> <input type="text"></li>
-              <li><input type="checkbox"> <input type="text"></li>
-              <li><input type="checkbox"> <input type="text"></li>
-              <li><input type="checkbox"> <input type="text"></li>
-            </ul>
-          </div>
+        <div class="subsection relacionamentos">
+          <h3>RELACIONAMENTOS</h3>
+          <ul class="lista-relacionamento">
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+          </ul>
+        </div>
 
-          <div class="subsection notas">
-            <h3>NOTAS</h3>
-            <textarea rows="5" cols="40" placeholder="Escreva suas anotações aqui..."></textarea>
-          </div>
+        <div class="subsection equipamento">
+          <h3>EQUIPAMENTO</h3>
+          <p>Durante cada atribuição, escolha até três.</p>
+          <ul class="lista-equipamento">
+            <li><input type="checkbox"> <input type="text"></li>
+            <li><input type="checkbox"> <input type="text"></li>
+            <li><input type="checkbox"> <input type="text"></li>
+            <li><input type="checkbox"> <input type="text"></li>
+            <li><input type="checkbox"> <input type="text"></li>
+            <li><input type="checkbox"> <input type="text"></li>
+          </ul>
+        </div>
+
+        <div class="subsection notas">
+          <h3>NOTAS</h3>
+          <textarea rows="5" cols="40" placeholder="Escreva suas anotações aqui..."></textarea>
+        </div>
         <button type="submit">Salvar Ficha</button>
       </form>
     </header>
   </main>
+<!-- Modal para mostrar resultado do dado -->
+<div id="modalDado" class="modal-dado">
+  <div class="modal-content">
+    <span id="fecharModal" class="fechar">&times;</span>
+    <p id="resultadoDado" class="resultado-dado-text"></p>
+  </div>
+</div>
 
+  
 </body>
 
 </html>
