--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <div class="logo">CANDELA OBSCURA</div>
       <div class="header-buttons">
         <!-- Simulador de Dados -->
-        <button id="btnSimuladorDados" class="btn-simulador">Simulador de Dados ▼</button>
+        <button id="btnSimuladorDados" class="btn-simulador">Dados ▼</button>
         <div id="menuSimuladorDados" class="menu-simulador" style="display:none;">
           <button data-lados="4">D4</button>
           <button data-lados="6">D6</button>
