--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,20 @@
             </label>
           </div>
           <div class="atributo" id="astucia">
-            <h2>Astúcia</h2>
+            <div class="titulo-impulsos-container">
+              <h2>Astúcia</h2>
+              <div class="impulsos-checkboxes">
+                <input type="checkbox" name="corpo_impulso_1" />
+                <input type="checkbox" name="corpo_impulso_2" />
+                <input type="checkbox" name="corpo_impulso_3" />
+                <input type="checkbox" name="corpo_impulso_4" />
+                <input type="checkbox" name="corpo_impulso_5" />
+                <input type="checkbox" name="corpo_impulso_6" />
+                <input type="checkbox" name="corpo_impulso_7" />
+                <input type="checkbox" name="corpo_impulso_8" />
+                <input type="checkbox" name="corpo_impulso_9" />
+              </div>
+            </div>
             <label><input type="checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small></label>
             <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
               type="checkbox"> <input type="checkbox"> <input type="checkbox">
@@ -140,7 +153,20 @@
             </label>
           </div>
           <div class="atributo" id="intuicao">
-            <h2>Intuição</h2>
+            <div class="titulo-impulsos-container">
+              <h2>Intuição</h2>
+              <div class="impulsos-checkboxes">
+                <input type="checkbox" name="corpo_impulso_1" />
+                <input type="checkbox" name="corpo_impulso_2" />
+                <input type="checkbox" name="corpo_impulso_3" />
+                <input type="checkbox" name="corpo_impulso_4" />
+                <input type="checkbox" name="corpo_impulso_5" />
+                <input type="checkbox" name="corpo_impulso_6" />
+                <input type="checkbox" name="corpo_impulso_7" />
+                <input type="checkbox" name="corpo_impulso_8" />
+                <input type="checkbox" name="corpo_impulso_9" />
+              </div>
+            </div>
             <label><input type="checkbox"> Persuasão <small>(Convencer, Liderar)</small>
               <br>
               <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
