--- a/public/index.html
+++ b/public/index.html
@@ -237,20 +237,20 @@
               <h2>CICATRIZES</h2>
             </div>
             <div class="cicatrizes-conteudo">
-              <p>Marque até 3 cicatrizes e descreva-as:</p>
+              <p>Marque suas cicatrizes e descreva-as:</p>
               <div class="linha-cicatriz">
                 <input type="checkbox" name="cicatriz_1" id="cicatriz_1" />
-                <label for="cicatriz_1">Cicatriz 1</label>
+                <label for="cicatriz_1">Cicatriz</label>
                 <input type="text" name="desc_cicatriz_1" placeholder="Descrição da cicatriz 1" />
               </div>
               <div class="linha-cicatriz">
                 <input type="checkbox" name="cicatriz_2" id="cicatriz_2" />
-                <label for="cicatriz_2">Cicatriz 2</label>
+                <label for="cicatriz_2">Cicatriz</label>
                 <input type="text" name="desc_cicatriz_2" placeholder="Descrição da cicatriz 2" />
               </div>
               <div class="linha-cicatriz">
                 <input type="checkbox" name="cicatriz_3" id="cicatriz_3" />
-                <label for="cicatriz_3">Cicatriz 3</label>
+                <label for="cicatriz_3">Cicatriz</label>
                 <input type="text" name="desc_cicatriz_3" placeholder="Descrição da cicatriz 3" />
               </div>
             </div>
