--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
           <textarea name="especialidade" rows="10"></textarea>
         </section>
 
-        <!-- Marcas, Relacionamentos, Equipamento e Notas -->
+        <!-- Marcas e Cicatrizes -->
         <div class="marcas-cicatrizes-container">
           <div class="section marcas">
             <div class="header-black">
@@ -258,7 +258,8 @@
 
         </div>
 
-
+        <!-- Relacionamentos, Equipamento e Notas -->
+         <div class="relacionamentos-e-equipamento-container">
         <div class="subsection relacionamentos">
           <h3>RELACIONAMENTOS</h3>
           <ul class="lista-relacionamento">
@@ -277,7 +278,6 @@
             <li><input type="text"></li>
           </ul>
         </div>
-
         <div class="subsection equipamento">
           <h3>EQUIPAMENTO</h3>
           <p>Durante cada atribuição, escolha até três.</p>
@@ -289,6 +289,7 @@
             <li><input type="checkbox"> <input type="text"></li>
             <li><input type="checkbox"> <input type="text"></li>
           </ul>
+        </div>
         </div>
 
         <div class="notas-e-circulo-container">
@@ -305,6 +306,7 @@
       </form>
     </header>
   </main>
+
   <!-- Modal para mostrar resultado do dado -->
   <div id="modalDado" class="modal-dado">
     <div class="modal-content">
