acerto astúcia e intuição

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
                 <input type="checkbox" name="corpo_impulso_9" />
               </div>
             </div>
-            <label><input type="checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small></label>
+            <label><input type="checkbox"> Persuadir <small>(Convencer, Liderar)</small></label>
             <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
               type="checkbox"> <input type="checkbox"> <input type="checkbox">
             <!-- <input type="number" name="investigar" min="0" max="6" /> -->
@@ -167,7 +167,7 @@
                 <input type="checkbox" name="corpo_impulso_9" />
               </div>
             </div>
-            <label><input type="checkbox"> Persuasão <small>(Convencer, Liderar)</small>
+            <label><input type="checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
               <br>
               <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input type="checkbox"> <input
                 type="checkbox"> <input type="checkbox"> <input type="checkbox">
