--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,18 @@
                 <input type="checkbox" name="corpo_impulso_8" />
                 <input type="checkbox" name="corpo_impulso_9" />
               </div>
+              <div class="impulsos-maximo">
+                <input type="checkbox" name="corpo_impulso_1" />
+                <input type="checkbox" name="corpo_impulso_2" />
+                <input type="checkbox" name="corpo_impulso_3" />
+                <input type="checkbox" name="corpo_impulso_4" />
+                <input type="checkbox" name="corpo_impulso_5" />
+                <input type="checkbox" name="corpo_impulso_6" />
+                <input type="checkbox" name="corpo_impulso_7" />
+                <input type="checkbox" name="corpo_impulso_8" />
+                <input type="checkbox" name="corpo_impulso_9" />
+
+              </div>
             </div>
             <label><input type="checkbox" class="mover-checkbox"> Mover <small>(Correr, Desviar, Guiar)</small>
               <br>
