--- a/public/index.html
+++ b/public/index.html
@@ -123,15 +123,15 @@
             <div class="titulo-impulsos-container">
               <h2>Astúcia</h2>
               <div class="impulsos-checkboxes">
-                <input type="checkbox" name="corpo_impulso_1" />
-                <input type="checkbox" name="corpo_impulso_2" />
-                <input type="checkbox" name="corpo_impulso_3" />
-                <input type="checkbox" name="corpo_impulso_4" />
-                <input type="checkbox" name="corpo_impulso_5" />
-                <input type="checkbox" name="corpo_impulso_6" />
-                <input type="checkbox" name="corpo_impulso_7" />
-                <input type="checkbox" name="corpo_impulso_8" />
-                <input type="checkbox" name="corpo_impulso_9" />
+                <input type="checkbox" name="astucia_impulso_1" />
+                <input type="checkbox" name="astucia_impulso_2" />
+                <input type="checkbox" name="astucia_impulso_3" />
+                <input type="checkbox" name="astucia_impulso_4" />
+                <input type="checkbox" name="astucia_impulso_5" />
+                <input type="checkbox" name="astucia_impulso_6" />
+                <input type="checkbox" name="astucia_impulso_7" />
+                <input type="checkbox" name="astucia_impulso_8" />
+                <input type="checkbox" name="astucia_impulso_9" />
               </div>
             </div>
             <label><input type="checkbox"> Persuadir <small>(Convencer, Liderar)</small></label>
@@ -156,15 +156,15 @@
             <div class="titulo-impulsos-container">
               <h2>Intuição</h2>
               <div class="impulsos-checkboxes">
-                <input type="checkbox" name="corpo_impulso_1" />
-                <input type="checkbox" name="corpo_impulso_2" />
-                <input type="checkbox" name="corpo_impulso_3" />
-                <input type="checkbox" name="corpo_impulso_4" />
-                <input type="checkbox" name="corpo_impulso_5" />
-                <input type="checkbox" name="corpo_impulso_6" />
-                <input type="checkbox" name="corpo_impulso_7" />
-                <input type="checkbox" name="corpo_impulso_8" />
-                <input type="checkbox" name="corpo_impulso_9" />
+                <input type="checkbox" name="intuicao_impulso_1" />
+                <input type="checkbox" name="intuicao_impulso_2" />
+                <input type="checkbox" name="intuicao_impulso_3" />
+                <input type="checkbox" name="intuicao_impulso_4" />
+                <input type="checkbox" name="intuicao_impulso_5" />
+                <input type="checkbox" name="intuicao_impulso_6" />
+                <input type="checkbox" name="intuicao_impulso_7" />
+                <input type="checkbox" name="intuicao_impulso_8" />
+                <input type="checkbox" name="intuicao_impulso_9" />
               </div>
             </div>
             <label><input type="checkbox"> Investigar <small>(Pesquisar, Rastrear, Localizar)</small>
